--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@giphy/js-fetch-api": "^1.6.0",
+    "@giphy/react-components": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,8 +15,15 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "node scripts/deploy.js",
+    "eject": "react-scripts eject",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test:coverage": "npm test -- --coverage --watchAll",
+    "format": "prettier \"**/*.+(js|jsx|json|yml|yaml|md)\" --write",
+    "lint": "eslint src"
+  },
+  "hooks": {
+    "pre-commit": "lint-staged"
   },
   "eslintConfig": {
     "extends": "react-app"
