Try lint-staged config

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "hooks": {
-    "pre-commit": "lint-staged"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "browserslist": {
     "production": [
