--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,4 @@
 {
-  "linters": {
-    "*.{js,jsx}": ["eslint"],
-    "*.{js,jsx,json,yml,yaml,md}": ["prettier --write"]
-  }
+  "*.{js,jsx}": "eslint",
+  "*.{js,jsx,json,yml,yaml,md}": "prettier --write"
 }
