--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
       "pre-commit": "lint-staged"
     }
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/*.{js,jsx}",
+      "src/components/**/*.{js,jsx}",
+      "src/pages/**/*.{js,jsx}",
+      "src/utils/*.{js,jsx}"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
