--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "node scripts/deploy.js",
     "eject": "react-scripts eject",
     "test": "react-scripts test",
-    "test:coverage": "npm test -- --coverage --watchAll",
+    "test:coverage": "npm test -- --coverage --watchAll=false",
     "format": "prettier \"**/*.+(js|jsx|json|yml|yaml|md)\" --write",
     "lint": "eslint src"
   },
@@ -23,10 +23,11 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/*.{js,jsx}",
+      "src/App.js",
       "src/components/**/*.{js,jsx}",
       "src/pages/**/*.{js,jsx}",
-      "src/utils/*.{js,jsx}"
+      "!src/store/configureStore.js",
+      "!**/*/index.js"
     ]
   },
   "browserslist": {
