Add aliases for react and jest

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "deploy": "node scripts/deploy.js",
-    "eject": "react-scripts eject",
-    "test": "react-scripts test",
+    "eject": "react-app-rewired eject",
+    "test": "react-app-rewired test",
     "test:coverage": "npm test -- --coverage --watchAll=false",
     "prettier": "prettier \"**/*.+(js|jsx|json|yml|yaml|md)\" --write",
     "lint": "eslint src"
@@ -22,10 +22,16 @@
     }
   },
   "jest": {
+    "moduleNameMapper": {
+      "^assets(.*)$": "<rootDir>/src/assets$1",
+      "^components(.*)$": "<rootDir>/src/components$1",
+      "^pages(.*)$": "<rootDir>/src/pages$1",
+      "^utils(.*)$": "<rootDir>/src/utils$1"
+    },
     "collectCoverageFrom": [
-      "src/components/**/*.{js,jsx}",
-      "src/pages/**/*.{js,jsx}",
-      "!src/store/configureStore.js",
+      "components/**/*.{js,jsx}",
+      "pages/**/*.{js,jsx}",
+      "!store/configureStore.js",
       "!**/*/index.js"
     ]
   },
@@ -58,6 +64,7 @@
     "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^7.1.2",
     "babel-eslint": "^10.1.0",
+    "customize-cra": "^1.0.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-fp": "^2.3.0",
@@ -69,6 +76,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.6",
     "prettier": "^2.0.5",
+    "react-app-rewired": "^2.1.6",
     "react-test-renderer": "^16.13.1"
   }
 }
