--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "node server.js",
+    "dev": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "deploy": "node scripts/deploy.js",
-    "eject": "react-app-rewired eject",
+    "deploy": "git push heroku master",
     "test": "react-app-rewired test",
     "test:coverage": "npm test -- --coverage --watchAll=false",
     "prettier": "prettier \"**/*.+(js|jsx|json|yml|yaml|md)\" --write",
@@ -51,6 +51,9 @@
     "@giphy/js-fetch-api": "^1.6.0",
     "@giphy/react-components": "^1.5.1",
     "bootstrap": "^4.5.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
