--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-REACT_APP_API_URL_BASE=https://api.giphy.com/v1
-REACT_APP_API_KEY=qs1JyBa5SIrPpDDClWv5cD9HZpjThe0x
+GIFS_API_BASE_URL=https://api.giphy.com/v1/gifs
+GIPHY_API_KEY=qs1JyBa5SIrPpDDClWv5cD9HZpjThe0x
