--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express-favicon": "^2.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-resize-observer": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.5.1"
